--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,5 +7,6 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
+
       - name: list files
-        uses: ls -la
+        run: ls -la
