--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
-        runs: echo "${{env.greeting}} Family"
+        run: echo "${{env.greeting}} Family"
