--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,7 +1,7 @@
 name: secret
 on: [push]
 env:
-  my_secret_value: ${{ secret.joy_personal }}
+  my_secret_value: ${{ secrets.joy_personal }}
 
 jobs:
   secret:
