--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
 
       - name: print secret
         run: echo "$my-secret-value"
