--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: print secret
-        run: echo "$my-secret-value"
+        run: echo  ${{my-secret-value}}
